fix layout issue

--- a/src/styles/FeedPage.scss
+++ b/src/styles/FeedPage.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: $Tabs-height - 20px;
+  margin-top: $component-margin;
   padding: 0 $component-margin;
   background-color: $background-color;
 }
